--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ p {
 .content {
     width: 75%;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 20px;    
 }
 
 /* content section class has repeated article, so I generalize here*/
@@ -86,6 +86,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    overflow: auto;
 }
 
 /* content section class has repeated img, so I generalize here*/
