--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
+/* general styling for all element on page, removes white space on border*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* main body of page styling*/
 body {
     background-color: #d9dcd6;
 }
 
+/* style header section */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -20,10 +23,12 @@ body {
     font-size: 48px;
 }
 
+/* style seo coloring in main text logo*/
 .header h1 .seo {
     color: #d9dcd6;
 }
 
+/* styles for nav bar and elements*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -41,15 +46,18 @@ body {
     margin-left: 25px;
 }
 
+/* link styling*/
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* paragraph styling*/
 p {
     font-size: 16px;
 }
 
+/* hero section as large banner with image*/
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +67,7 @@ p {
     background-position: center;
 }
 
+/* float images to one side for articles in content section*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -68,7 +77,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/* content section styling*/
 .content {
     width: 75%;
     display: inline-block;
@@ -86,7 +95,6 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-    overflow: auto;
 }
 
 /* content section class has repeated img, so I generalize here*/
@@ -101,10 +109,13 @@ p {
 /* originally separated by article classes */
 /* (.search-engine-optimization, .online-reputation-management, .social-media-marketing)*/
 /* but this is unnecessary*/
-.content h2 {
+.content article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+
+/* benefits section styling*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -135,12 +146,13 @@ p {
 /* benefits section class has repeated img, so I generalize here*/
 /* originally separated by article classes */
 /* (.benefit-brand, .benefit-lead, .benefit-cost), but this is unnecessary*/
-.benefits img {
+.benefits article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+/* footer styling*/
 .footer {
     padding: 30px;
     clear: both;
